<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    

    <TextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_lbl"
        android:layout_marginTop="@dimen/margin_lbl"
        android:text="@string/lbl_amount"
        android:textSize="@dimen/textSize_lbl" />

    <EditText
        android:id="@+id/txtAmount"
        android:selectAllOnFocus="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_txt"
        android:layout_marginEnd="@dimen/margin_txt"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:text="@string/txt_amount"
        android:textSize="@dimen/textSize_txt"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/lblFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_lbl"
        android:layout_marginTop="@dimen/margin_lbl"
        android:text="@string/lbl_from"
        android:textSize="@dimen/textSize_lbl" />

    <RadioGroup
        android:id="@+id/rdGroupFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFromEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:checked="true"
            android:text="@string/rbEuro"
            android:textSize="@dimen/textSize_rb" />

        <RadioButton
            android:id="@+id/rbFromDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:enabled="false"
            android:text="@string/rbDollar"
            android:textSize="@dimen/textSize_rb" />

        <RadioButton
            android:id="@+id/rbFromPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:text="@string/rbPound"
            android:textSize="@dimen/textSize_rb" />

        <ImageView
            android:id="@+id/imgFrom"
            android:contentDescription="@string/imgFrom_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:minWidth="@dimen/min_img"
            android:minHeight="@dimen/min_img"
            android:src="@drawable/ic_euro" />

    </RadioGroup>

    <TextView
        android:id="@+id/lblTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_lbl"
        android:layout_marginTop="@dimen/margin_lbl"
        android:text="@string/lblTo"
        android:textSize="@dimen/textSize_lbl" />

    <RadioGroup
        android:id="@+id/rdGroupTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:enabled="false"
            android:text="@string/rbEuro"
            android:textSize="@dimen/textSize_rb" />

        <RadioButton
            android:id="@+id/rbToDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:checked="true"
            android:text="@string/rbDollar"
            android:textSize="@dimen/textSize_rb" />

        <RadioButton
            android:id="@+id/rbToPound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:text="@string/rbPound"
            android:textSize="@dimen/textSize_rb" />

        <ImageView
            android:id="@+id/imgTo"
            android:contentDescription="@string/imgTo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_rb_img"
            android:minWidth="@dimen/min_img"
            android:minHeight="@dimen/min_img"
            android:src="@drawable/ic_dollar" />

    </RadioGroup>

    <Button
        android:id="@+id/btnExchange"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_btn"
        android:text="@string/btn_exchange" />

</LinearLayout>
