<resources>
    <string name="app_name">Exchange</string>
    <string name="lbl_amount">Amount</string>
    <string name="txt_amount">0.00</string>
    <string name="lbl_from">From currency</string>
    <string name="rbEuro">Euro</string>
    <string name="rbDollar">Dollar</string>
    <string name="rbPound">Pound</string>
    <string name="lblTo">To currency</string>
    <string name="btn_exchange">Exchange</string>
    <string name="amount_matches">\\d+(\\.\\d+)?</string>
    <string name="imgTo_description">This ImageView will show the image of the currency that has been converted.</string>
    <string name="imgFrom_description">This ImageView will show the image of the currency that is going to be converted.</string>
    <string name="txt_defaultValue">0.00</string>
    <string name="euro_dollar_string">%.2f € = %.2f $</string>
    <string name="euro_pound_string">%.2f € = %.2f £</string>
    <string name="dollar_euro_string">%.2f $ = %.2f €</string>
    <string name="dollar_pound_string">%.2f $ = %.2f £</string>
    <string name="pound_euro_string">%.2f £ = %.2f €</string>
    <string name="pound_dollar_string">%.2f £ = %.2f $</string>
</resources>
